all warnings for devbot

--- a/devbot.cabal
+++ b/devbot.cabal
@@ -12,14 +12,23 @@ category:            Network
 build-type:          Simple
 cabal-version:       >=1.10
 
+flag release
+  description:         for installation
+  default: False
+  manual: True
+
 executable devbot_list
   hs-source-dirs:      src
   main-is:             list.hs
   default-language:    Haskell2010
 
   ghc-options:
-    -Wall -Wno-type-defaults -Wno-missing-signatures -Wno-name-shadowing
-    -dynamic -O
+    -Wall
+
+  if flag(release)
+    ghc-options: -O2
+  else
+    ghc-options: -dynamic -O0
 
   build-depends:
     base >= 4.7 && < 5,
@@ -32,8 +41,12 @@ executable devbot_status
   default-language:    Haskell2010
 
   ghc-options:
-    -Wall -Wno-type-defaults -Wno-missing-signatures -Wno-name-shadowing
-    -dynamic -O
+    -Wall
+
+  if flag(release)
+    ghc-options: -O2
+  else
+    ghc-options: -dynamic -O0
 
   build-depends:
     base >= 4.7 && < 5,
@@ -47,8 +60,12 @@ executable devbot
   default-language:    Haskell2010
 
   ghc-options:
-    -Wall -Wno-type-defaults -Wno-missing-signatures -Wno-name-shadowing
-    -dynamic -O
+    -Wall
+
+  if flag(release)
+    ghc-options: -O2
+  else
+    ghc-options: -dynamic -O0
 
   build-depends:
     base >= 4.7 && < 5,
@@ -63,7 +80,12 @@ library
     ../apocrypha
 
   ghc-options:
-    -Wall -Wno-type-defaults -Wno-missing-signatures -Wno-name-shadowing
+    -Wall
+
+  if flag(release)
+    ghc-options: -O2
+  else
+    ghc-options: -dynamic -O0
 
   exposed-modules:
     Devbot
