--- a/devbot.cabal
+++ b/devbot.cabal
@@ -17,46 +17,9 @@ flag release
   default: False
   manual: True
 
-executable devbot_list
-  hs-source-dirs:      src
-  main-is:             list.hs
-  default-language:    Haskell2010
-
-  ghc-options:
-    -Wall
-
-  if flag(release)
-    ghc-options: -O2
-  else
-    ghc-options: -dynamic -O0
-
-  build-depends:
-    base >= 4.7 && < 5,
-    devbot,
-    time
-
-executable devbot_status
-  hs-source-dirs:      src
-  main-is:             status.hs
-  default-language:    Haskell2010
-
-  ghc-options:
-    -Wall
-
-  if flag(release)
-    ghc-options: -O2
-  else
-    ghc-options: -dynamic -O0
-
-  build-depends:
-    base >= 4.7 && < 5,
-    apocrypha,
-    directory,
-    process
-
 executable devbot
   hs-source-dirs:      src
-  main-is:             bot.hs
+  main-is:             main.hs
   default-language:    Haskell2010
 
   ghc-options:
@@ -65,7 +28,7 @@ executable devbot
   if flag(release)
     ghc-options: -O2
   else
-    ghc-options: -dynamic -O0
+    ghc-options: -O0
 
   build-depends:
     base >= 4.7 && < 5,
@@ -85,10 +48,13 @@ library
   if flag(release)
     ghc-options: -O2
   else
-    ghc-options: -dynamic -O0
+    ghc-options: -O0
 
   exposed-modules:
-    Devbot
+    Devbot.Core
+    Devbot.List
+    Devbot.Status
+    Devbot.Bot
     ColorText
 
   other-modules:
@@ -102,7 +68,10 @@ library
     apocrypha,
     binary,
     bytestring,
+    directory,
     network,
+    process,
     text,
+    time,
     unordered-containers,
     vector
