--- a/stack.yaml
+++ b/stack.yaml
@@ -35,7 +35,7 @@ resolver: lts-12.14
 #  - wai
 packages:
 - .
-- ../apocrypha
+- ../apocrypha-haskell
 
 # Dependency packages to be pulled from upstream that are not in the resolver
 # using the same syntax as the packages field.
