--- a/devbot.cabal
+++ b/devbot.cabal
@@ -57,6 +57,8 @@ library
     Devbot.Service.Runtime
 
     Devbot.Internal.Common
+    Devbot.Internal.ColorText
+    Devbot.Internal.Display
     Devbot.Internal.Directory
     Devbot.Internal.Parser
     Devbot.Internal.System
@@ -67,8 +69,7 @@ library
     Devbot.List
     Devbot.Status
     Devbot.Schema
-
-    ColorText
+    Devbot.Table
 
   default-language:    Haskell2010
   build-depends:
