--- a/devbot.cabal
+++ b/devbot.cabal
@@ -21,6 +21,7 @@ executable devbot
   hs-source-dirs:      src
   main-is:             main.hs
   default-language:    Haskell2010
+  default-extensions:  LambdaCase
 
   ghc-options:
     -Wall
@@ -69,11 +70,13 @@ library
     Devbot.Daemon
     Devbot.List
     Devbot.ParseCheck
+    Devbot.Run
     Devbot.Status
     Devbot.Schema
     Devbot.Table
 
   default-language:    Haskell2010
+  default-extensions:  LambdaCase
   build-depends:
     base >= 4.7 && < 5,
     aeson,
