--- a/devbot.cabal
+++ b/devbot.cabal
@@ -21,7 +21,7 @@ executable devbot
   hs-source-dirs:      src
   main-is:             main.hs
   default-language:    Haskell2010
-  default-extensions:  LambdaCase
+  default-extensions:  LambdaCase, RecordWildCards
 
   ghc-options:
     -Wall
@@ -76,7 +76,7 @@ library
     Devbot.Table
 
   default-language:    Haskell2010
-  default-extensions:  LambdaCase
+  default-extensions:  LambdaCase, RecordWildCards
   build-depends:
     base >= 4.7 && < 5,
     aeson,
